<resources>
    <string name="app_name">ZenboDevSample</string>
    <string name="toolbar_title_mainclass_robotapi_title">RobotAPI</string>
    <string name="toolbar_title_subclass_contacts_title">RobotAPI. contacts</string>
    <string name="toolbar_title_subclass_motion_title">RobotAPI. motion</string>
    <string name="toolbar_title_subclass_robot_title">RobotAPI. robot</string>
    <string name="toolbar_title_subclass_utility_title">RobotAPI. utility</string>
    <string name="toolbar_title_subclass_vision_title">RobotAPI. vision</string>
    <string name="toolbar_title_subclass_wheel_title">RobotAPI. wheelLights</string>
    <string-array name="subclasses_type">
        <item>motion</item>
        <item>robot</item>
        <item>utility</item>
        <item>vision</item>
        <item>wheelLights</item>
    </string-array>
    <string-array name="subclasses_type_mapping_activity_class">
        <item>Motion</item>
        <item>Robot</item>
        <item>Utility</item>
        <item>Vision</item>
        <item>WheelLights</item>
    </string-array>
    <string name="robotapi_cancelCommand_full">RobotAPI. cancelCommand</string>
    <string name="robotapi_cancelCommand_less">cancelCommand</string>
    <string name="robotapi_cancelCommand_api">cancelCommand(int command)</string>
    <string-array name="subclasses_motion">
        <item>@string/motion_moveBody_and_movehead</item>
        <item>@string/motion_remoteControlBody_and_remoteControlHead</item>
    </string-array>
    <string-array name="subclasses_motion_mapping_activity_class">
        <item>MotionMoveBodyHead</item>
        <item>MotionRemoteControlBodyHead</item>
    </string-array>
    <string name="motion_moveBody_and_movehead">moveBody <![CDATA[&]]> moveHead</string>
    <string name="motion_remoteControlBody_and_remoteControlHead">remoteControlBody <![CDATA[&]]> remoteControlHead</string>
    <string name="motion_moveBody_full">RobotAPI. motion. moveBody</string>
    <string name="motion_moveBody_less">moveBody</string>
    <string name="motion_moveBody_api">moveBody(float relativeX, float relativeY, float relativeTheta)</string>
    <string name="motion_moveBody_level_full">RobotAPI. motion. moveBody</string>
    <string name="motion_moveBody_level_less">moveBody</string>
    <string name="motion_moveBody_level_api">moveBody(float relativeX, float relativeY, float relativeTheta, MotionControl.SpeedLevel.Body speedLevel)</string>
    <string name="motion_moveHead_full">RobotAPI. motion. moveHead</string>
    <string name="motion_moveHead_less">moveHead</string>
    <string name="motion_moveHead_api">moveHead(float yaw, float pitch, MotionControl.SpeedLevel.Head speedLevel)</string>
    <string name="motion_remoteControlBody_full">RobotAPI. motion. remoteControlBody</string>
    <string name="motion_remoteControlBody_less">remoteControlBody</string>
    <string name="motion_remoteControlBody_api">remoteControlBody( MotionControl. Direction. Body direction)</string>
    <string name="motion_remoteControlHead_full">RobotAPI. motion. remoteControlHead</string>
    <string name="motion_remoteControlHead_less">remoteControlHead</string>
    <string name="motion_remoteControlHead_api">remoteControlHead( MotionControl. Direction. Head direction)</string>
    <string name="motion_stopMoving_full">RobotAPI. motion. stopMoving</string>
    <string name="motion_stopMoving_less">stopMoving</string>
    <string name="motion_stopMoving_api">stopMoving()</string>
    <string name="motion_remoteControlBody_FORWARD">FORWARD</string>
    <string name="motion_remoteControlBody_BACKWARD">BACKWARD</string>
    <string name="motion_remoteControlBody_TURN_LEFT">TURN_LEFT</string>
    <string name="motion_remoteControlBody_TURN_RIGHT">TURN_RIGHT</string>
    <string name="motion_remoteControlBody_STOP">STOP</string>
    <string name="motion_remoteControlHead_UP">UP</string>
    <string name="motion_remoteControlHead_LEFT">LEFT</string>
    <string name="motion_remoteControlHead_RIGHT">RIGHT</string>
    <string name="motion_remoteControlHead_DOWN">DOWN</string>
    <string name="motion_remoteControlHead_STOP">STOP</string>
    <string-array name="subclasses_robot">
        <item>@string/robot_speak_less</item>
        <item>@string/robot_setExpression_less</item>
    </string-array>
    <string name="robot_speak">Speak Content</string>
    <string name="robot_speak_full">RobotAPI. robot. speak</string>
    <string name="robot_speak_less">speak</string>
    <string name="robot_speak_api">speak(java.lang.String sentence)</string>
    <string name="robot_stopSpeak_full">RobotAPI. robot. stopSpeak</string>
    <string name="robot_stopSpeak_less">stopSpeak</string>
    <string name="robot_stopSpeak_api">stopSpeak()</string>
    <string name="robot_setExpression_full">RobotAPI. robot. setExpression</string>
    <string name="robot_setExpression_less">setExpression</string>
    <string name="robot_setExpression_api">setExpression(RobotFace face)</string>
    <string name="robot_speak_example">This is a example. You can try to press the stop button to stop zenbo speaking.</string>
    <string name="robot_setExpression_candidate_select">Please select a expression :</string>
    <string-array name="subclasses_utility">
        <item>@string/utility_playAction_less</item>
        <item>@string/utility_playEmotionalAction_less</item>
    </string-array>
    <string name="utility_playAction_full">RobotAPI. utility. playAction</string>
    <string name="utility_playAction_less">playAction</string>
    <string name="utility_playAction_api">playAction(int number)</string>
    <string name="utility_playEmotionalAction_full">RobotAPI. utility. playEmotionalAction</string>
    <string name="utility_playEmotionalAction_less">playEmotionalAction</string>
    <string name="utility_playEmotionalAction_api">playEmotionalAction(java.util.List<![CDATA[<RobotUtil.faceItem>]]> faceList, int playAction)</string>
    <string name="utility_playAction_text_id">Please enter action #ID:</string>
    <string name="utility_playEmotionalAction_text_id">Please slect demo example :</string>
    <string-array name="subclasses_vision">
        <item>@string/vision_detectPersion_and_cancel</item>
        <item>@string/vision_detectFace_and_cancel</item>
    </string-array>
    <string name="vision_detectPersion_and_cancel">requestDetectPerson <![CDATA[&]]> cancelDetectPerson</string>
    <string name="vision_detectFace_and_cancel">requestDetectFace <![CDATA[&]]> cancelDetectFace</string>
    <string name="vision_requestDetectPerson_full">RobotAPI. vision. requestDetectPerson</string>
    <string name="vision_requestDetectPerson_less">requestDetectPerson</string>
    <string name="vision_requestDetectPerson_api">requestDetectPerson( interval in milliseconds )</string>
    <string name="vision_cancelDetectPerson_full">RobotAPI. vision. cancelDetectPerson</string>
    <string name="vision_cancelDetectPerson_less">cancelDetectPerson</string>
    <string name="vision_cancelDetectPerson_api">cancelDetectPerson()</string>
    <string name="vision_requestDetectFace_full">RobotAPI. vision. requestDetectFace</string>
    <string name="vision_requestDetectFace_less">requestDetectFace</string>
    <string name="vision_requestDetectFace_api">requestDetectFace(FaceDetectConfig config)</string>
    <string name="vision_cancelDetectFace_full">RobotAPI. vision. cancelDetectFace</string>
    <string name="vision_cancelDetectFace_less">cancelDetectFace</string>
    <string name="vision_cancelDetectFace_api">cancelDetectFace()</string>
    <string name="Detect_Person">Detect Person</string>
    <string name="Cancel_Detect_Person">Cancel Detect Person</string>
    <string-array name="subclasses_wheel">
        <item>@string/wheelLights_setColor_less</item>
        <item>@string/wheelLights_startBreath_less</item>
        <item>@string/wheelLights_startBreathRainbow_less</item>
        <item>@string/wheelLights_startColorCycle_less</item>
        <item>@string/wheelLights_startComet_less</item>
        <item>@string/wheelLights_startFlashDash_less</item>
        <item>@string/wheelLights_startGlowingYoYo_less</item>
        <item>@string/wheelLights_startMovingFlash_less</item>
        <item>@string/wheelLights_startRainbowComet_less</item>
        <item>@string/wheelLights_startRainbowWave_less</item>
        <item>@string/wheelLights_startStarryNight_less</item>
        <item>@string/wheelLights_startStatic_less</item>
        <item>@string/wheelLights_startStrobing_less</item>
        <item>@string/wheelLights_startWave_less</item>

        <item>@string/wheelLights_turnoff_less</item>
    </string-array>
    <string name="wheelLights_setColor_full">RobotAPI. wheelLights. setColor</string>
    <string name="wheelLights_setColor_less">setColor</string>
    <string name="wheelLights_setColor_api">setColor( WheelLights.Lights id, int active, int color )</string>
    <string name="wheelLights_startBreath_full">RobotAPI. wheelLights. startBreath</string>
    <string name="wheelLights_startBreath_less">startBreath</string>
    <string name="wheelLights_startBreath_api">startBreath(WheelLights.Lights id, WheelLights.Speed speed)</string>
    <string name="wheelLights_startBreathRainbow_full">RobotAPI. wheelLights. startBreathRainbow</string>
    <string name="wheelLights_startBreathRainbow_less">startBreathRainbow</string>
    <string name="wheelLights_startBreathRainbow_api">public int startBreathRainbow(WheelLights.Lights id, WheelLights.Speed speed)</string>
    <string name="wheelLights_startColorCycle_full">RobotAPI. wheelLights. startColorCycle</string>
    <string name="wheelLights_startColorCycle_less">startColorCycle</string>
    <string name="wheelLights_startColorCycle_api">startColorCycle(WheelLights.Lights id, WheelLights.Speed speed)</string>
    <string name="wheelLights_startComet_full">RobotAPI. wheelLights. startComet</string>
    <string name="wheelLights_startComet_less">startComet</string>
    <string name="wheelLights_startComet_api">startComet(WheelLights.Lights id, WheelLights.Direction direction, WheelLights.Speed speed)</string>
    <string name="wheelLights_startFlashDash_full">RobotAPI. wheelLights. startFlashDash</string>
    <string name="wheelLights_startFlashDash_less">startFlashDash</string>
    <string name="wheelLights_startFlashDash_api">startFlashDash(WheelLights.Lights id, WheelLights.Direction direction, WheelLights.Speed speed)</string>
    <string name="wheelLights_startGlowingYoYo_full">RobotAPI. wheelLights. startGlowingYoYo</string>
    <string name="wheelLights_startGlowingYoYo_less">startGlowingYoYo</string>
    <string name="wheelLights_startGlowingYoYo_api">startGlowingYoYo(WheelLights.Lights id, WheelLights.Speed speed)</string>
    <string name="wheelLights_startMovingFlash_full">RobotAPI. wheelLights. startMovingFlash</string>
    <string name="wheelLights_startMovingFlash_less">startMovingFlash</string>
    <string name="wheelLights_startMovingFlash_api"> startMovingFlash(WheelLights.Lights id, WheelLights.Direction direction, WheelLights.Speed speed)</string>
    <string name="wheelLights_startRainbow_full">RobotAPI. wheelLights. startRainbow</string>
    <string name="wheelLights_startRainbow_less">startRainbow</string>
    <string name="wheelLights_startRainbow_api">startRainbow(WheelLights.Lights id, WheelLights.Direction direction, WheelLights.Speed speed)</string>
    <string name="wheelLights_startRainbowComet_full">RobotAPI. wheelLights. startRainbowComet</string>
    <string name="wheelLights_startRainbowComet_less">startRainbowComet</string>
    <string name="wheelLights_startRainbowComet_api">startRainbowComet(WheelLights.Lights id, WheelLights.Direction direction, WheelLights.Speed speed)</string>
    <string name="wheelLights_startRainbowWave_full">RobotAPI. wheelLights. startRainbowWave</string>
    <string name="wheelLights_startRainbowWave_less">startRainbowWave</string>
</resources>