<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:text=""
                android:textColor="#F5DC49" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textview_title"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:weightSum="1">

                <!-- ========MoveBody======== -->
                <TextView
                    android:id="@+id/textview_moveBody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motion_moveBody_api" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/moveButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:text="@string/motion_moveBody_less" />

                        <EditText
                            android:id="@+id/motion_moveBody_X"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:ems="6"
                            android:inputType="numberSigned|numberDecimal" />

                        <EditText
                            android:id="@+id/motion_moveBody_Y"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:ems="6"
                            android:inputType="numberSigned|numberDecimal" />

                        <EditText
                            android:id="@+id/motion_moveTheta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:ems="6"
                            android:inputType="numberSigned|numberDecimal" />
                    </TableRow>
                </TableLayout>


                <!-- ========MoveBody Level======== -->
                <TextView
                    android:id="@+id/textView_moveBody_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motion_moveBody_level_api" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/btn_motion_moveBody_speedlevel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:text="@string/motion_moveBody_level_less" />

                        <EditText
                            android:id="@+id/editText_motion_moveBody_level_x"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:ems="6"
                            android:inputType="numberSigned|numberDecimal" />

                        <EditText
                            android:id="@+id/editText_motion_moveBody_level_Y"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:ems="6"
                            android:inputType="numberSigned|numberDecimal" />

                        <EditText
                            android:id="@+id/editText_motion_moveBody_level_theta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:ems="6"
                            android:inputType="numberSigned|numberDecimal" />

                        <Spinner
                            android:id="@+id/spinner_motion_moveSpeedLevel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="4" />
                    </TableRow>
                </TableLayout>


                <Space
                    android:layout_width="1dp"
                    android:layout_height="30dp" />


                <!-- ========MoveHead======== -->
                <TextView
                    android:id="@+id/textview_moveHead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motion_moveHead_api" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_moveHead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/motion_moveHead_less" />

                    <EditText
                        android:id="@+id/editText_motion_headYaw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:ems="6"
                        android:inputType="numberSigned|numberDecimal"
                        android:labelFor="@id/editText_motion_headYaw" />


                    <EditText
                        android:id="@+id/editText_motion_headPitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:ems="6"
                        android:inputType="numberSigned|numberDecimal" />

                    <Spinner
                        android:id="@+id/spinner_motion_moveHead_speedlevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="3" />
                </TableRow>

                <Space
                    android:layout_width="1dp"
                    android:layout_height="30dp" />


                <!-- ========StopMove======== -->
                <TextView
                    android:id="@+id/textview_stopmove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motion_stopMoving_full" />

                <Button
                    android:id="@+id/stopButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/motion_stopMoving_less" />

                <Space
                    android:layout_width="1dp"
                    android:layout_height="30dp" />


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</LinearLayout>